--- a/Sy.DataAccess/Sy.DataAccess.csproj
+++ b/Sy.DataAccess/Sy.DataAccess.csproj
@@ -48,11 +48,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StockDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sy.Core\Sy.Core.csproj">
+      <Project>{BEA89F91-86DB-420E-A970-ACFBB002EAFD}</Project>
+      <Name>Sy.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
