--- a/Sy.Core/Sy.Core.csproj
+++ b/Sy.Core/Sy.Core.csproj
@@ -52,15 +52,17 @@
     <Compile Include="Abstracts\BaseEntity.cs" />
     <Compile Include="Abstracts\IEntity.cs" />
     <Compile Include="Abstracts\IRepository.cs" />
+    <Compile Include="ComplexType\StockSettings.cs" />
     <Compile Include="Entities\Client.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Enums\ApplicationRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\LoginViewModels.cs" />
+    <Compile Include="ViewModels\ProductViewModel.cs" />
     <Compile Include="ViewModels\RegisterViewModel.cs" />
+    <Compile Include="ViewModels\UserInfoViewModel.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ComplexType\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
